--- a/okhttp4k/src/main/AndroidManifest.xml
+++ b/okhttp4k/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="okhttp4k" />
+<manifest
+        package="okhttp4k"/>
