Revert "Kotlin code style"
This reverts commit d9e5af57d24211c7f053e4faf558e05636d57863.

--- a/okhttp4k/src/main/AndroidManifest.xml
+++ b/okhttp4k/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
-<manifest
-        package="okhttp4k"/>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="okhttp4k" />
