--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@
 buildscript {
     ext.kotlin_version = '1.2.0'
     repositories {
-        google()
         jcenter()
+        maven { url 'https://maven.google.com/' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.0-alpha05'
@@ -17,8 +17,8 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         jcenter()
+        maven { url 'https://maven.google.com/' }
     }
 }
 
