--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,9 @@
 buildscript {
     ext.kotlin_version = '1.2.10'
     repositories {
+        google()
         jcenter()
         mavenCentral()
-        maven { url 'https://maven.google.com/' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
@@ -18,9 +18,9 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
         mavenCentral()
-        maven { url 'https://maven.google.com/' }
     }
 }
 
